--- a/ShopAndChop_Final/Views/Base.lproj/Main.storyboard
+++ b/ShopAndChop_Final/Views/Base.lproj/Main.storyboard
@@ -9,22 +9,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Login View Controller-->
-        <scene sceneID="H7i-r2-iAq">
-            <objects>
-                <viewController id="na7-4t-uQY" customClass="LoginViewController" customModule="Shop_Chop" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="oDt-Ti-SwU">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="HJ7-XA-EIi"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="or0-SX-RDH"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qgG-HC-w0R" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-143" y="646"/>
-        </scene>
         <!--Welcome View Controller-->
         <scene sceneID="ixS-5b-KKs">
             <objects>
@@ -45,7 +29,7 @@
                                     <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="PUP-MS-pPX" kind="show" id="zaI-Hb-uGX"/>
+                                    <segue destination="PUP-MS-pPX" kind="show" identifier="GotToRegister" id="zaI-Hb-uGX"/>
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dark_logo_transparent_background" translatesAutoresizingMaskIntoConstraints="NO" id="NwN-2w-qkD">
@@ -54,7 +38,7 @@
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ip-id-kdA">
                                 <rect key="frame" x="0.0" y="790" width="414" height="61"/>
-                                <color key="backgroundColor" red="0.19440048135465987" green="0.64799641088112114" blue="0.49845465474639356" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" red="0.19607843137254902" green="0.6470588235294118" blue="0.49803921568627452" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="61" id="7q6-UC-H3g"/>
                                 </constraints>
@@ -63,7 +47,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <segue destination="na7-4t-uQY" kind="show" id="2O0-8c-jQ4"/>
+                                    <segue destination="0vU-Fb-K1y" kind="show" identifier="GoToLogin" id="YhK-JS-qV1"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -141,11 +125,13 @@
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zYW-5R-ora">
                                         <rect key="frame" x="0.0" y="126" width="414" height="51"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" red="0.19607843137254902" green="0.6470588235294118" blue="0.49803921568627452" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <state key="normal" title="Register">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="xyx-sm-Vby" kind="show" identifier="RegisterToStart" id="xez-o2-sau"/>
+                                        </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="vap-M2-Tuh">
                                         <rect key="frame" x="0.0" y="20" width="414" height="137"/>
@@ -171,7 +157,7 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="KJN-xq-gOs"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.60737317965332338" green="0.79088784493121911" blue="0.69770660695782949" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="qFP-X6-DlW" firstAttribute="trailing" secondItem="KJN-xq-gOs" secondAttribute="trailing" id="IrM-mT-kue"/>
                             <constraint firstItem="qFP-X6-DlW" firstAttribute="top" secondItem="KJN-xq-gOs" secondAttribute="top" id="QVb-gJ-5B0"/>
@@ -191,7 +177,117 @@
             </objects>
             <point key="canvasLocation" x="-143.47826086956522" y="-72.991071428571431"/>
         </scene>
+        <!--MainScreenViewController-->
+        <scene sceneID="0b5-Ez-27v">
+            <objects>
+                <viewController title="MainScreenViewController" id="xyx-sm-Vby" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rh5-Km-zye">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Gkg-eg-3r4"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="49Z-Rb-Ctn"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Whd-QR-ZWf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="838" y="200"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="Foj-cs-QCE">
+            <objects>
+                <viewController id="0vU-Fb-K1y" userLabel="Login View Controller" customClass="RegisterViewController" customModule="Shop_Chop" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KXm-fj-rFW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ouR-O3-qyH" userLabel="EmailView">
+                                <rect key="frame" x="0.0" y="88" width="414" height="177"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="XFH-f1-AOB">
+                                        <rect key="frame" x="0.0" y="20" width="414" height="137"/>
+                                    </imageView>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fdj-zt-piD">
+                                        <rect key="frame" x="48" y="50" width="318" height="45"/>
+                                        <color key="textColor" name="BrandBlue"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="XFH-f1-AOB" firstAttribute="top" secondItem="ouR-O3-qyH" secondAttribute="top" constant="20" id="2IT-EA-eqo"/>
+                                    <constraint firstItem="XFH-f1-AOB" firstAttribute="leading" secondItem="ouR-O3-qyH" secondAttribute="leading" id="3Am-hk-6NU"/>
+                                    <constraint firstAttribute="height" constant="177" id="F5G-Oh-X7O"/>
+                                    <constraint firstAttribute="bottom" secondItem="Fdj-zt-piD" secondAttribute="bottom" constant="82" id="Fte-NN-KhF"/>
+                                    <constraint firstAttribute="bottom" secondItem="XFH-f1-AOB" secondAttribute="bottom" constant="20" id="J3m-Fc-s59"/>
+                                    <constraint firstItem="Fdj-zt-piD" firstAttribute="top" secondItem="ouR-O3-qyH" secondAttribute="top" constant="50" id="OcN-vY-6kj"/>
+                                    <constraint firstItem="Fdj-zt-piD" firstAttribute="left" secondItem="ouR-O3-qyH" secondAttribute="left" constant="48" id="PeD-TX-qYN"/>
+                                    <constraint firstAttribute="right" secondItem="Fdj-zt-piD" secondAttribute="right" constant="48" id="VIc-lb-kob"/>
+                                    <constraint firstAttribute="trailing" secondItem="XFH-f1-AOB" secondAttribute="trailing" id="n27-C1-pmS"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qUW-aH-dOp" userLabel="PasswordView">
+                                <rect key="frame" x="0.0" y="165" width="414" height="177"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="33u-Te-MJb">
+                                        <rect key="frame" x="0.0" y="126" width="414" height="51"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="Login">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="xyx-sm-Vby" kind="show" identifier="LoginToStart" id="1Ek-V6-wE5"/>
+                                        </connections>
+                                    </button>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="5jH-6v-ZKy">
+                                        <rect key="frame" x="0.0" y="20" width="414" height="137"/>
+                                    </imageView>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C9y-w4-6n0">
+                                        <rect key="frame" x="49" y="50" width="317" height="45"/>
+                                        <color key="textColor" name="BrandBlue"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="C9y-w4-6n0" firstAttribute="left" secondItem="qUW-aH-dOp" secondAttribute="left" constant="49" id="Efj-Vp-tPN"/>
+                                    <constraint firstAttribute="bottom" secondItem="5jH-6v-ZKy" secondAttribute="bottom" constant="20" id="NIh-Sw-a8e"/>
+                                    <constraint firstAttribute="height" constant="177" id="Ogc-ct-Bhj"/>
+                                    <constraint firstAttribute="right" secondItem="C9y-w4-6n0" secondAttribute="right" constant="48" id="Y7V-6g-Tjb"/>
+                                    <constraint firstAttribute="trailing" secondItem="5jH-6v-ZKy" secondAttribute="trailing" id="fkb-Nx-bii"/>
+                                    <constraint firstItem="5jH-6v-ZKy" firstAttribute="top" secondItem="qUW-aH-dOp" secondAttribute="top" constant="20" id="iOo-NU-iFC"/>
+                                    <constraint firstAttribute="bottom" secondItem="C9y-w4-6n0" secondAttribute="bottom" constant="82" id="pr0-L7-f2s"/>
+                                    <constraint firstItem="C9y-w4-6n0" firstAttribute="top" secondItem="qUW-aH-dOp" secondAttribute="top" constant="50" id="ue8-bt-ltr"/>
+                                    <constraint firstItem="5jH-6v-ZKy" firstAttribute="leading" secondItem="qUW-aH-dOp" secondAttribute="leading" id="xC0-H4-UhH"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="eE1-eW-dno"/>
+                        <color key="backgroundColor" red="0.19607843137254902" green="0.6470588235294118" blue="0.49803921568627452" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="ouR-O3-qyH" firstAttribute="trailing" secondItem="eE1-eW-dno" secondAttribute="trailing" id="S7R-Lb-14U"/>
+                            <constraint firstItem="ouR-O3-qyH" firstAttribute="top" secondItem="eE1-eW-dno" secondAttribute="top" id="VfC-ZQ-bIg"/>
+                            <constraint firstItem="ouR-O3-qyH" firstAttribute="leading" secondItem="eE1-eW-dno" secondAttribute="leading" id="aSR-49-d7v"/>
+                            <constraint firstItem="qUW-aH-dOp" firstAttribute="leading" secondItem="eE1-eW-dno" secondAttribute="leading" id="hAH-Aq-qUS"/>
+                            <constraint firstItem="qUW-aH-dOp" firstAttribute="trailing" secondItem="eE1-eW-dno" secondAttribute="trailing" id="hId-4q-qjK"/>
+                            <constraint firstItem="qUW-aH-dOp" firstAttribute="top" secondItem="ouR-O3-qyH" secondAttribute="bottom" constant="-100" id="z02-vf-HEQ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="cKx-98-ApV"/>
+                    <connections>
+                        <outlet property="emailTextfield" destination="Fdj-zt-piD" id="BKs-Jd-Qot"/>
+                        <outlet property="passwordTextfield" destination="C9y-w4-6n0" id="eYS-bl-YuW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EzF-UE-hTu" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-143" y="612"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="1Ek-V6-wE5"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="dark_logo_transparent_background" width="3340" height="3400"/>
         <image name="textfield" width="298" height="93"/>
